--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
     "test:ui": "vitest --ui"
   },
   "devDependencies": {
+    "@stylistic/stylelint-plugin": "^3.1.3",
     "@types/jest": "^30.0.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "^24.0.10",
     "@vitest/ui": "^3.2.4",
     "jsdom": "^26.1.0",
+    "stylelint": "^16.21.1",
+    "stylelint-config-recess-order": "^7.1.0",
+    "stylelint-config-standard": "^38.0.0",
+    "stylelint-order": "^7.0.0",
+    "stylelint-scss": "^6.12.1",
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4",
